# claude-cookbooks_zh-CN

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  lychee.toml  pyproject.toml
capabilities/: README.md
claude_agent_sdk/: 00_The_one_liner_research_agent.ipynb  01_The_chief_of_staff_agent.ipynb  02_The_observability_agent.ipynb  README.md
coding/: prompting_for_frontend_aesthetics.ipynb
extended_thinking/: extended_thinking.ipynb  extended_thinking_with_tool_use.ipynb
finetuning/: finetuning_on_bedrock.ipynb
misc/: batch_processing.ipynb  building_evals.ipynb  building_moderation_filter.ipynb  generate_test_cases.ipynb  how_to_enable_json_mode.ipynb  how_to_make_sql_queries.ipynb  metaprompt.ipynb  pdf_upload_summarization.ipynb  prompt_caching.ipynb  read_web_pages_with_haiku.ipynb  sampling_past_max_tokens.ipynb  speculative_prompt_caching.ipynb  using_citations.ipynb  总结.txt
multimodal/: getting_started_with_vision.ipynb  how_to_transcribe_text.ipynb  reading_charts_graphs_powerpoints.ipynb  using_sub_agents.ipynb
observability/: usage_cost_api.ipynb
scripts/: validate_all_notebooks.py  validate_notebooks.py
skills/: .env.example  CLAUDE.md  README.md  file_utils.py  requirements.txt  skill_utils.py
studynote/: 贡献指南.txt
tool_evaluation/: tool_evaluation.ipynb
tool_use/: .env.example  calculator_tool.ipynb  customer_service_agent.ipynb  extracting_structured_json.ipynb  memory_cookbook.ipynb  memory_tool.py  parallel_tools.ipynb  tool_choice.ipynb  tool_use_with_pydantic.ipynb  vision_with_tools.ipynb
(+97 files in other folders)
