[project]
name = "anthropic-cookbook"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.71.0",
    "ipykernel>=7.1.0",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "jupyter>=1.1.1",
    "voyageai>=0.3.5",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.3.3",
    "nbval>=0.11.0",
    "pre-commit>=3.8.0",
    "nbconvert>=7.16.0", 
]

[tool.hatch.build.targets.wheel]
packages = ["anthropic_cookbook"]  # 构建系统的虚拟包

[tool.ruff]
line-length = 100
target-version = "py311"
extend-include = ["*.ipynb"]  # Ruff v0.6.0+ 默认包含 notebook，但显式指定更好

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
ignore = [
    "N806",   # 函数中的变量应该是小写（允许用于 API 响应）
]

[tool.ruff.lint.per-file-ignores]
# Notebook 与常规 Python 文件有不同的约定
"*.ipynb" = [
    "E402",   # 文件中间导入
    "F811",   # 重新定义（在 notebook 中常见）
    "N803",   # 参数名应该是小写
    "N806",   # 函数中的变量应该是小写
]

